Receipts - update create - update store - update edit - update update

--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,12 @@
         "psr-4": {
             "Rutatiina\\Receipt\\": "src/"
         }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Rutatiina\\Receipt\\ReceiptServiceProvider"
+            ]
+        }
     }
 }
